# Lathe-Simulation

./: CMakeLists.txt  README.md  main.cpp
Base/: Base.h
Button/: Button.h
CurveArea/: CurveArea.h
Knife/: Knife.h
Material/: Material.h
Particle/: Particle.h
Release/: CG_Project.exp  CG_Project.lib
SkyBox/: SkyBox.h
include/: model.h  stb_image.h
